# WaterMark3D

./: .gitignore  CMakeLists.txt  README.md  build.bat  install_packages.bat
shader/: rectangle.frag  rectangle.vert
src/: camera.h  main.cpp  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h
ui/: mainwindow.ui
